@@ -3,26 +3,22 @@ package ru.yandex.practicum.filmorate.service;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Likes;
 import ru.yandex.practicum.filmorate.storage.Storage;
+import ru.yandex.practicum.filmorate.storage.db.FilmDbStorage;
 
 @Slf4j
 @Service
+@AllArgsConstructor
 public class FilmService {
-    private final Storage<Film, Long> storage;
-    private final Storage<Likes, Long> likes;
-
-    public FilmService(Storage<Film, Long> repository, Storage<Likes, Long> likes) {
-        this.likes = likes;
-        log.info("Init film service.");
-        this.storage = repository;
-    }
+    private final Storage<Film, Integer> storage;
+    private final LikeService likeService;
 
     public Film add(Film film) {
         storage.add(film);
@@ -30,8 +26,9 @@ public class FilmService {
         return film;
     }
 
-    public Film update(Long id, Film film) {
-        log.info("Update film with key: [" + id + "] with value [" + film + "]. Id not included.");
+    public Film update(Film film) {
+        Integer id = film.getId();
+        log.info("Update film with key: [" + id + "] with value [" + film + "].");
         return storage.update(film, id);
     }
 
@@ -40,33 +37,24 @@ public class FilmService {
         return storage.getAll();
     }
 
-    public Film getById(Long id) {
+    public Film getById(Integer id) {
         return storage.get(id);
     }
 
     public Collection<Film> getFilms(int size, int from, String sort) {
         Comparator<LocalDate> comparator = (o1, o2) -> sort.equals("asc") ? o1.compareTo(o2) : o2.compareTo(o1);
-        return storage.getAll().stream().sorted(Comparator.comparing(Film::getReleaseDate, comparator)).skip(from).limit(size).toList();
+        return storage.getAll().stream().sorted(Comparator.comparing(Film::getReleased, comparator)).skip(from).limit(size).toList();
 
     }
 
-    public Integer like(Long filmId, Long userId, boolean add) throws IllegalArgumentException {
-        if (likes.get(filmId) == null) {
-            getOrThrow(filmId);
-            likes.add(filmId, new Likes());
-        }
+    public Long like(Integer filmId, Integer userId) throws IllegalArgumentException {
+        getOrThrow(filmId);
+        likeService.add(userId, filmId);
 
-        Likes filmLikes = likes.get(filmId);
-        if (add) {
-            filmLikes.add(userId);
-        } else {
-            filmLikes.remove(userId);
-        }
-
-        return filmLikes.size();
+        return likeService.getCount(filmId);
     }
 
-    private Film getOrThrow(Long filmId) {
+    private Film getOrThrow(Integer filmId) {
         Film film = storage.get(filmId);
         if (film == null) {
             throw new IllegalArgumentException("Film with id " + filmId + "not found.");
@@ -76,10 +64,10 @@ public class FilmService {
     }
 
     public Collection<Film> getTop(Integer count) {
-        return likes.keySet().stream()
-                .sorted((k1, k2) -> Integer.compare(likes.get(k2).size(), likes.get(k1).size()))
-                .limit(count)
-                .map(this::getOrThrow)
-                .collect(Collectors.toList());
+        return likeService.getTop(count).stream().map(this::getById).toList();
+    }
+
+    public Long deleteLike(Integer filmId, Integer userId) {
+        return likeService.delete(userId, filmId);
     }
 }
